# Validating-lightning-signer2

docs/: policy-controls.md
embedded/src/: tests.rs
lightning-signer-core/: Cargo.toml
lightning-signer-core/src/: channel.rs  example_main.rs  lib.rs  node.rs  state.rs
lightning-signer-core/src/policy/: validator.rs
lightning-signer-core/src/signer/: multi_signer.rs
lightning-signer-core/src/util/: mod.rs  (+3 more)
lightning-signer-core/tests/: functional_test.rs
lightning-storage-server/: Cargo.toml
lightning-storage-server/contrib/: Dockerfile  cassandra.yaml  docker-compose.yml
lightning-storage-server/examples/: cassandra_bench.rs  database_bench.rs
lightning-storage-server/src/database/: cassandra.rs  mod.rs  scylla.rs
lightning-storage-server/src/server/: mod.rs
lightning-storage-server/tests/: integration_test.rs
scripts/: test-all
vls-core/: Cargo.toml
vls-core/src/: channel.rs  node.rs  sign_mutual_close_tests.rs  validate_holder_commitment_tests.rs
vls-core/tests/: functional_test.rs
vls-frontend/: Cargo.toml
vls-frontend/src/: chain_follower.rs  frontend.rs  lib.rs
vls-persist/src/: kv_json.rs  model.rs
vls-protocol-client/src/: dyn_signer.rs  lib.rs
vls-protocol-signer/src/: handler.rs
vls-protocol/src/: msgs.rs
vls-proxy/: Cargo.toml
vls-proxy/src/: portfront.rs  serial_main.rs  socket_main.rs  socket_test_main.rs  test.rs  vls_main.rs
vls-server/src/: nodefront.rs
vls-signer-stm32/: Cargo.toml
vls-signer-stm32/src/: demo_signer_main.rs  device.rs  test_main.rs  usbserial.rs
vlsd/: Cargo.toml
wasm/src/: lib.rs
(+10 files in other folders)
